Fixed Overflow

--- a/src/Pages/ItemDetail.module.css
+++ b/src/Pages/ItemDetail.module.css
@@ -50,13 +50,13 @@
 
 @media screen and (max-width: 700px) {
   .item {
-    margin: 0rem 1rem;
+    margin: 0rem 2rem;
   }
 }
 
 @media screen and (max-width: 525px) {
   .item {
-    margin: 3rem 2rem;
+    margin: 3rem 3rem;
   }
 
   .item img {
