--- a/src/Pages/shop.module.css
+++ b/src/Pages/shop.module.css
@@ -113,7 +113,7 @@
 
 @media screen and (max-width: 525px) {
   .shop nav {
-    height: 20vh;
+    height: 30vh;
   }
 
   .shopContainer h1 {
